fix home icon on mobile headers

--- a/index.css
+++ b/index.css
@@ -25,17 +25,17 @@ li {
 .header {
   background: white;
   box-shadow: rgba(0, 0, 0, 0.075) 0 1px;
-  height: 60px;
+  height: 50px;
   width: 100%;
   z-index: 6;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
 }
 
 .header-icon {
   /* border: 2px solid red; */
-  width: 5%;
+  width: 10%;
   text-align: center;
   cursor: pointer;
 }
@@ -49,7 +49,7 @@ li {
 
 .header-title {
   /* border: 2px solid red; */
-  width: 95%;
+  width: 90%;
   text-align: center;
 }
 /* The side navigation menu */
